[gd_scene load_steps=8 format=2]

[ext_resource path="res://world/background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/world.gd" type="Script" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/ground/ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/ceiling/ceiling.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/button_tap.png" type="Texture" id=6]
[ext_resource path="res://ui/button_tap_pressed.png" type="Texture" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Background" parent="." instance=ExtResource( 1 )]
position = Vector2( -1.12244, 0.943878 )

[node name="ObstacleSpawn" type="Node2D" parent="."]
position = Vector2( 900, 200 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Ground" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 450 )

[node name="Ceiling" parent="." instance=ExtResource( 5 )]
position = Vector2( 400, 30 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 240 )

[node name="UI" type="Node" parent="."]

[node name="TapButton" type="TextureButton" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -88.0
margin_right = 68.0
margin_bottom = -8.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="pressed" from="UI/TapButton" to="." method="_tap"]
